<resources>
    <string name="app_name">WeChatRedesign</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="lbl_login_to_continue">Login to continue</string>
    <string name="lbl_enter_your_phone_number">Enter Your Phone Number</string>
    <string name="lbl_enter_your_password">Enter Your Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_hi">Hi !</string>
    <string name="lbl_create_a_new_account">Create a new account</string>
    <string name="get_otp">Get OTP</string>
    <string name="lbl_dont_receive_the_otp">Dont receive the OTP?</string>
    <string name="lbl_resend_code">Resend Code</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_text_your_friends_and_share_moments">Text your friends and share moments</string>
    <string name="lbl_end_to_end_secured_messaging_app_with_social_elements">End-to-end secured messaging app with Social Elements</string>
    <string name="lbl_enter_your_name">Enter Your Name</string>
    <string name="lbl_date_of_birth">Date Of Birth</string>
    <string name="lbl_day">Day</string>
    <string name="lbl_month">Month</string>
    <string name="lbl_year">Year</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_password">password</string>
    <string name="lbl_moments">Moments</string>
    <string name="lbl_moment">Moment</string>
    <string name="lbl_chat">Chat</string>
    <string name="lbl_contacts">Contacts</string>
    <string name="lbl_me">Me</string>
    <string name="lbl_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_phone_number">091234567</string>
    <string name="lbl_username">Thiha</string>
    <string name="lbl_posttime">14 min ago</string>
    <string name="lbl_new_moment">New Moment</string>
    <string name="lbl_create">Create</string>
    <string name="lbl_what_s_your_mind">What\'s your mind</string>
    <string name="lbl_bookmarked_moments">Bookmarked Moments</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_new_group">New Group</string>
    <string name="lbl_group_name">group name</string>
    <string name="lbl_active_now">active_now</string>
    <string name="lbl_long_text">The early 19th-century Konbaung dynasty ruled over an area that included modern Myanmar and briefly controlled Manipur and Assam as well. The British East India Company seized control of the administration of Myanmar after three Anglo-Burmese Wars in the 19th century, and the country became a British colony. After a brief Japanese occupation, Myanmar was reconquered by the Allies and gained independence in 1948. Following a coup d\'état in 1962, it became a military dictatorship under the Burma Socialist Pr</string>
    <string name="lbl_profile_setup">Setup Profile</string>
    <string name="lbl_finish">Finish</string>
    <string name="lbl_tap_to_change_profile_picture">Tap to change profile picture</string>
    <string name="lbl_log_out">Log out</string>
</resources>