<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBackFromLoginScreen"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/ic_baseline_arrow_back_black_24"
        android:tint="@color/text_color_primary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBackFromLoginScreen"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/lbl_welcome"
        android:textColor="@color/text_color_primary"
        android:textSize="@dimen/text_heading_1x"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLoginToContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWelcome"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/lbl_login_to_continue"
        android:textColor="@color/text_color_primary"
        android:textSize="@dimen/text_regular_2x" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLoginIllustration"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_below="@id/tvLoginToContinue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:src="@drawable/ic_login_illustration" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEnterPhoneNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLoginIllustration"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:text="@string/lbl_enter_your_phone_number"
        android:textSize="@dimen/text_regular_2x" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEnterPhoneNumberLabel"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:hint="09xxx"
        android:inputType="phone"
        android:textColor="@color/text_color_primary" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhoneNumber"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:inputType="textPassword"
        android:hint="@string/lbl_enter_your_password"
        android:textColor="@color/text_color_primary" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/etPassword"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/text_color_primary"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium"/>

    <FrameLayout
        android:id="@+id/btnLoginFromLoginScreen"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:alpha="0.5"
        android:background="@drawable/fill_color_button_background">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lbl_login"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

    </FrameLayout>

</RelativeLayout>