<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateMomentActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnDismissMoment"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/ic_baseline_close_black_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/lbl_new_moment"
        android:textColor="@color/text_color_primary"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold" />


    <FrameLayout
        android:id="@+id/btnConfirmToCreateMoment"
        android:layout_width="70dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:background="@drawable/fill_color_button_background">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lbl_create"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />
    </FrameLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfileImageFromCreateMoment"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_below="@id/btnDismissMoment"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_vector" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUserNameFromCreateMoment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_username"
        android:textSize="@dimen/text_regular_3x"
        android:layout_toEndOf="@id/ivProfileImageFromCreateMoment"
        android:layout_below="@id/btnDismissMoment"
        android:layout_alignBottom="@id/ivProfileImageFromCreateMoment"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:textColor="@color/text_color_primary"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCreateMoment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUserNameFromCreateMoment"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:background="@android:color/transparent"
        android:hint="@string/lbl_what_s_your_mind" />

    <HorizontalScrollView
        android:id="@+id/scrollViewTagFile"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scrollbars="none"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_medium_2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:itemCount="2"
                tools:listitem="@layout/view_holder_file" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ivPickFile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="@dimen/margin_medium_2"
                android:background="@drawable/signup_button_background"
                android:src="@drawable/ic_baseline_add_black_24" />

        </LinearLayout>
    </HorizontalScrollView>


</RelativeLayout>